tests/record/record.exp
Error ------------------------------------------------------------------------------------------------------ test.js:4:8

Cannot assign object literal to `o1` because string [1] is incompatible with number [2] in property `bar`.
[incompatible-type]

   test.js:4:8
   4|   bar: "", // error: string ~/~ number
             ^^ [1]

References:
   test.js:2:23
   2| var o1: {[key: Key1]: number} = {
                            ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:7:1

string `qux` [1] is incompatible with literal union [2]. [incompatible-type]

   test.js:7:1
   7| o1.qux; // error: qux not found
      ^^^^^^ [1]

References:
   test.js:2:16
   2| var o1: {[key: Key1]: number} = {
                     ^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:14:1

Property `qux` is missing in `R` [1]. [prop-missing]

   test.js:14:1
   14| o2.qux; // error: qux not found
       ^^^^^^

References:
   test.js:12:16
   12| var o2: {[key: Key2]: number} = { foo: 0 }; // OK to leave out bar
                      ^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:19:1

Cannot extend `C` [1] with `D` because property `qux` is missing in object type [2] in the indexer property's key of
property `x`. [prop-missing]

   test.js:19:1
       v----------------------------------------------
   19| class D extends C<{foo: number, bar: string}> {
   20|   x: { foo: number, qux: boolean }; // error: qux not found
   21| }
       ^

References:
   test.js:19:17
   19| class D extends C<{foo: number, bar: string}> {
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   test.js:19:19
   19| class D extends C<{foo: number, bar: string}> {
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:20:6

Cannot extend `C` [1] with `D` because an index signature declaring the expected key / value type is missing in object
type [2] but exists in object type [3] in property `x`. [prop-missing]

   test.js:20:6
   20|   x: { foo: number, qux: boolean }; // error: qux not found
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]

References:
   test.js:19:17
   19| class D extends C<{foo: number, bar: string}> {
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   test.js:17:6
   17|   x: {[key: $Keys<X>]: any}; // object with larger key set than X's
            ^^^^^^^^^^^^^^^^^^^^^^ [3]



Found 5 errors
